--- a/main.html
+++ b/main.html
@@ -10,6 +10,33 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Feedback Form</h1>
+	<form>
+		<div>
+			<label for="name">Name</label>
+		    <input type="text" id="name" name="name" required minlength="3" maxlength="50">
+			
+		</div>
+
+		<div>
+			<label for="portfolio">Portfolio</label>
+		    <input type="url" id="portfolio" name="portfolio" required>
+			
+		</div>
+
+		<div>
+			<label for="favColor">favColor</label>
+		    <input type="color" id="favColor" name="favColor" required>
+			
+		</div>
+
+		<div>
+			<label for="likeness">likeness</label>
+		    <input type="range" id="likeness" name="likeness" required minlength="3" maxlength="100">
+			
+		</div>
+		<input type="submit" id="sumbmit" name="submit" value="submit">
+	</form>
 
 </body>
 
