--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 		    <input type="range" id="likeness" name="likeness" required minlength="3" maxlength="100">
 			
 		</div>
-		<input type="submit" id="sumbmit" name="submit" value="submit">
+		<input type="submit" id="submit" name="submit" value="submit">
 	</form>
 
 </body>
