--- a/main.html
+++ b/main.html
@@ -11,28 +11,28 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1>Feedback Form</h1>
-	<form>
+	<form method="POST">
 		<div>
-			<label for="name">Name</label>
-		    <input type="text" id="name" name="name" required minlength="3" maxlength="50">
+			<label for="name">name</label>
+		    <input type="text" id="name" name="name"  minlength="3" maxlength="50">
 			
 		</div>
 
 		<div>
-			<label for="portfolio">Portfolio</label>
-		    <input type="url" id="portfolio" name="portfolio" required>
+			<label for="portfolio">portfolio</label>
+		    <input type="url" id="portfolio" name="portfolio">
 			
 		</div>
 
 		<div>
 			<label for="favColor">favColor</label>
-		    <input type="color" id="favColor" name="favColor" required>
+		    <input type="color" id="favColor" name="favColor">
 			
 		</div>
 
 		<div>
 			<label for="likeness">likeness</label>
-		    <input type="range" id="likeness" name="likeness" required minlength="3" maxlength="100">
+		    <input type="range" id="likeness" name="likeness"  min="1" max="100">
 			
 		</div>
 		<input type="submit" id="submit" name="submit" value="submit">
