--- a/main.html
+++ b/main.html
@@ -14,25 +14,25 @@
 	<form method="POST">
 		<div>
 			<label for="name">name</label>
-		    <input type="text" id="name" name="name"  minlength="3" maxlength="50">
+		    <input type="text" id="name" name="name"  minlength="3" maxlength="50" required>
 			
 		</div>
 
 		<div>
 			<label for="portfolio">portfolio</label>
-		    <input type="url" id="portfolio" name="portfolio">
+		    <input type="url" id="portfolio" name="portfolio" required>
 			
 		</div>
 
 		<div>
 			<label for="favColor">favColor</label>
-		    <input type="color" id="favColor" name="favColor">
+		    <input type="color" id="favColor" name="favColor" required>
 			
 		</div>
 
 		<div>
 			<label for="likeness">likeness</label>
-		    <input type="range" id="likeness" name="likeness"  min="1" max="100">
+		    <input type="range" id="likeness" name="likeness"  min="1" max="100" required>
 			
 		</div>
 		<input type="submit" id="submit" name="submit" value="submit">
